Bug 521186 - "Backup File Suffix" field is not editable
Summary: "Backup File Suffix" field is not editable
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.3.2.1
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-07 21:52 UTC by Franck Rabeson
Modified: 2026-06-11 08:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Franck Rabeson 2026-06-07 21:52:57 UTC
DESCRIPTION


STEPS TO REPRODUCE
1. Open Settings dialog
2. Go to the General section
3. Go to File Handling tab
4. With backups enable, attempt to edit the "Backup File Suffix" field

OBSERVED RESULT
The field either remains unchanged or only accepts one character.

EXPECTED RESULT
The field should be editable.

SOFTWARE/OS VERSIONS
Observed in both Krita 5.3.2.1 and 6.0.2.1, on both Windows 10 and Android.

ADDITIONAL INFORMATION
Based on personal observations, this issue might have been present for several versions now, as I've also observed it on a laptop running Fedora a couple of years ago. Given that I was able to edit this setting on my main work computer a long time ago, there is a possibility that the issue has been present in all 5.x releases.
Comment 1 dra.w.p.il.e+bugskde 2026-06-08 06:02:59 UTC
Can confirm, this is caused by e13edec3dcd403e6e451978d3e4af999eb614b2e that incorrectly assigns the resource path validator to this field.
Comment 2 Bug Janitor Service 2026-06-08 06:16:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2818
Comment 3 Halla Rempt 2026-06-11 08:41:15 UTC
Git commit a7fc8aefbbb633b3fe2e19de44100943b13460a6 by Halla Rempt, on behalf of Carsten Hartenfels.
Committed on 11/06/2026 at 08:40.
Pushed by rempt into branch 'master'.

Fix writable resource path validator

By assigning it to the correct text field and returning Intermediate
instead of Invalid so that the user can actually type something into
this field at all.

M  +2    -2    libs/ui/dialogs/kis_dlg_preferences.cc

https://invent.kde.org/graphics/krita/-/commit/a7fc8aefbbb633b3fe2e19de44100943b13460a6