Fix writable resource path validator

By assigning it to the correct text field and returning Intermediate
instead of Invalid so that the user can actually type something into
this field at all.

BUG:521186