libs/ui/dialogs/kis_dlg_preferences.cc
@@ -144,7 +144,7 @@ struct WritableLocationValidator : public QValidator {
     {
         QFileInfo fi(line);
         if (!fi.isWritable()) {
-            return Invalid;
+            return Intermediate;
         }
         return Acceptable;
     }
@@ -560,7 +560,7 @@ GeneralTab::GeneralTab(QWidget *_parent, const char *_name)
         m_urlResourceFolder->setFileName(QStandardPaths::writableLocation(QStandardPaths::AppDataLocation));
     }
     QValidator *writableValidator = new WritableLocationValidator(m_urlResourceFolder);
-    txtBackupFileSuffix->setValidator(writableValidator);
+    m_urlResourceFolder->setValidator(writableValidator);
     connect(m_urlResourceFolder, SIGNAL(textChanged(QString)), SLOT(checkResourcePath()));
     checkResourcePath();
 
